java used to not have clamp... silly